--- a/templates/combat-options.hbs
+++ b/templates/combat-options.hbs
@@ -1,6 +1,7 @@
 <details class="combat-options" data-co-root {{#if open}}open{{/if}}>
   <summary class="combat-options__summary">
-    <i class="fas fa-crosshairs"></i> {{localize "WNG.CombatOptions"}}
+    <i class="fas fa-swords"></i>
+    <span>{{localize "WNG.CombatOptions"}}</span>
   </summary>
 
   <div class="combat-options__content">
@@ -8,7 +9,6 @@
     <div class="combat-options__group">
       <div class="combat-options__header">{{localize "WNG.MeleeOptions"}}</div>
       {{> co-checkbox name="allOutAttack" label=(t labels.allOutAttack) disabled=false checked=fields.allOutAttack}}
-      {{> co-checkbox name="fullDefence"  label=(t labels.fullDefence)  disabled=false checked=fields.fullDefence}}
       {{> co-checkbox name="charging"     label=(t labels.charge)       disabled=false checked=fields.charging}}
       {{> co-checkbox name="grapple"      label=(t labels.grapple)      disabled=false checked=fields.grapple}}
       {{> co-checkbox name="fallBack"     label=(t labels.fallBack)     disabled=false checked=fields.fallBack}}
@@ -27,20 +27,20 @@
     <div class="combat-options__group">
       <div class="combat-options__header">{{localize "WNG.GeneralOptions"}}</div>
 
+      {{> co-checkbox name="fullDefence"  label=(t labels.fullDefence)  disabled=false checked=fields.fullDefence}}
       {{> co-select name="cover"        label=(t labels.cover) value=fields.cover options=coverOptions}}
       {{> co-select name="visionPenalty" label=(t labels.vision) value=fields.visionPenalty options=visionOptions}}
       {{> co-select name="sizeModifier"  label=(t labels.size)   value=fields.sizeModifier options=sizeOptions}}
 
-      <div class="combat-options__option">
+      <div class="combat-options__option combat-options__option--called-shot">
         {{> co-checkbox name="calledShot.enabled" label=(t labels.calledShot) disabled=false checked=fields.calledShot.enabled}}
         <div class="combat-options__called-shot {{#unless fields.calledShot.enabled}}is-hidden{{/unless}}">
           {{> co-select name="calledShot.size"  label=(t labels.calledShotSize)  value=fields.calledShot.size options=calledShotSizes}}
-          <label class="combat-options__option">
+          <label class="combat-options__note">
             <span>{{t labels.calledShotLabel}}</span>
-            <input data-co name="calledShot.label" type="text" value="{{fields.calledShot.label}}" />
+            <input data-co name="calledShot.label" type="text" value="{{fields.calledShot.label}}" placeholder="Label" />
           </label>
           {{> co-checkbox name="calledShot.disarm"  label=(t labels.disarm)  disabled=false checked=fields.calledShot.disarm}}
-          {{> co-checkbox name="calledShot.entangle" label=(t labels.entangle) disabled=false checked=fields.calledShot.entangle}}
         </div>
       </div>
     </div>
