Add names to combat option select options

--- a/templates/partials/co-select.hbs
+++ b/templates/partials/co-select.hbs
@@ -1,6 +1,6 @@
 <label class="combat-options__option combat-options__option--select">
   <span>{{label}}</span>
-  <select data-co name="{{name}}">
+  <select data-co name="{{this.name}}">
     {{#each options}}
       <option value="{{this.value}}" {{#if (eq ../value this.value)}}selected{{/if}}>
         {{this.label}}
